WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310976
:in-range and :out-of-range pseudo-classes are wrong for time inputs with reversed ranges
https://bugs.webkit.org/show_bug.cgi?id=310976
Summary
:in-range and :out-of-range pseudo-classes are wrong for time inputs with rev...
Chris Dumez
Reported
2026-03-28 05:14:12 PDT
:in-range and :out-of-range pseudo-classes are wrong for time inputs with reversed ranges.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-28 05:16:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61571
EWS
Comment 2
2026-03-28 08:39:21 PDT
Committed
310156@main
(b14fa1947cf5): <
https://commits.webkit.org/310156@main
> Reviewed commits have been landed. Closing PR #61571 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-28 08:40:16 PDT
<
rdar://problem/173589851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug